--- a/ckanext/indexa/templates/home/snippets/search.html
+++ b/ckanext/indexa/templates/home/snippets/search.html
@@ -1,5 +1,5 @@
 <div class="module module-search module-narrow module-shallow box" xmlns="http://www.w3.org/1999/html">
-    <form class="module-content search-form" method="get" action="{% url_for 'dataset.search' %}">
+    <form class="module-content home-search-form search-form" method="get" action="{% url_for 'dataset.search' %}">
         <h3 class="heading">{{ _("Search data") }}</h3>
         <div class="search-input form-group search-giant">
             <input aria-label="{% block header_site_search_label %}{{ _('Search datasets') }}{% endblock %}"
