--- a/ckanext/indexa/templates/package/search.html
+++ b/ckanext/indexa/templates/package/search.html
@@ -4,12 +4,16 @@
         <div>
             {{ h.snippet('snippets/facet_custom_tags.html') }}
         </div>
-         <div>
+        <div>
             {{ h.snippet('snippets/facet_list.html', title=facet_titles['groups'], name='groups', search_facets=search_facets) }}
         </div>
         <a class="close no-text hide-filters"><i class="fa fa-times-circle"></i><span class="text">close</span></a>
     </div>
-        <div>
-            {{ h.snippet('snippets/facet_list.html', title=facet_titles['organization'], name='organization', search_facets=search_facets) }}
-        </div>
+    <div>
+        {{ h.snippet('snippets/facet_list.html', title=facet_titles['organization'], name='organization', search_facets=search_facets) }}
+    </div>
+    <div>
+        {{ h.snippet('snippets/facet_list.html', title=facet_titles['res_format'], name='res_format', search_facets=search_facets) }}
+    </div>
 {% endblock %}
+{% block package_search_results_api_inner %}{% endblock %}
