Vista del dataset finished. Cambiada un poco la de resource

--- a/ckanext/indexa/public/indexa.css
+++ b/ckanext/indexa/public/indexa.css
@@ -137,3 +137,9 @@ a-dataset {
 .a-color {
     color: #291042 !important;
 }
+/*ul.hierarchy-tree > li,*/
+/*ul.hierarchy-tree-top > li{*/
+/*    border: black;*/
+/*    border-style: solid;*/
+/*    padding-bottom: 20px;*/
+/*}*/
