--- a/ckanext/indexa/templates/base.html
+++ b/ckanext/indexa/templates/base.html
@@ -1,5 +1,7 @@
 {% ckan_extends %}
-
+{% block links -%}
+    <link rel="shortcut icon" href="/images/icon.png"/>
+{% endblock -%}
 {% block styles %}
   {{ super() }}
   <link rel="stylesheet" href="/indexa.css" />
