--- a/ckanext/indexa/templates/snippets/facet_custom_tags.html
+++ b/ckanext/indexa/templates/snippets/facet_custom_tags.html
@@ -6,14 +6,25 @@
     </h2>
     <nav aria-label="{{ title }}">
         <ul class="list-unstyled nav nav-simple nav-facet">
-            {% set active = 'active' %}
             {% for key,value in h.custom_tags().items() %}
-                <li class="nav-item  {% if key in request.url %}{{ active }} {% endif %}">
-                    <a href="{% if key not in request.url %}?tags={{ key }}{% else %}/dataset/{% endif %}"
-                       title="{{ value }}"
-                       class="a-tags-dataset">
-                        <img src="/images/{{ key }}.png" class="tags-icons-dataset">
-                        <p class="p-tags-dataset">{{ value }}</p>
+                <li class="nav-item {# {% if key in request.url %}{{ active }} {% endif %} #}">
+                    {% if key not in request.url %}
+                        {% if '/organization' in request.url %}
+                            {% set url_tag = h.get_url_tag_org(url=request.url, tag=key) %}
+                        {% else %}
+                            {% set url_tag = h.add_url_param(new_params={'tags':key}) %}
+                        {% endif %}
+                        <a href="{{ url_tag }}"
+                           title="{{ value }}"
+                           class="a-tags-dataset">
+                    {% else %}
+                        {% set url_tag = h.remove_url_param(key='tags', value=key) %}
+                        <a href="{{ url_tag }}"
+                           title="{{ value }}"
+                           class="a-tags-dataset">
+                    {% endif %}
+                    <img src="/images/{{ key }}.png" class="tags-icons-dataset">
+                    <p class="p-tags-dataset">{{ value }}</p>
                     </a>
                 </li>
             {% endfor %}
