--- a/ckanext/indexa/templates/package/read_base.html
+++ b/ckanext/indexa/templates/package/read_base.html
@@ -1,8 +1,22 @@
 {% ckan_extends %}
+{% set csv = h.get_csv_id(pkg.resources) %}
 {% block content_primary_nav %}
-    {{ h.build_custom_nav_icon(h.build_nav_icon(dataset_type ~ '.read', _('Dataset'), id=pkg.id if is_activity_archive else pkg.name, icon='sitemap')) }}
+    {# {{ h.build_custom_nav_icon(h.build_nav_icon(dataset_type ~ '.read', _('Dataset'), id=pkg.id if is_activity_archive else pkg.name, icon='sitemap')) }}
     {{ h.build_custom_nav_icon(h.build_nav_icon(dataset_type ~ '.groups', _('Groups'), id=pkg.id if is_activity_archive else pkg.name, icon='users')) }}
-    {{ h.build_custom_nav_icon(h.build_nav_icon(dataset_type ~ '.activity', _('Activity Stream'), id=pkg.id if is_activity_archive else pkg.name, icon='clock-o')) }}
+    {{ h.build_custom_nav_icon(h.build_nav_icon(dataset_type ~ '.activity', _('Activity Stream'), id=pkg.id if is_activity_archive else pkg.name, icon='clock-o')) }} #}
+    <li  {% if 'map' not in h.current_url() %} class="active" {% endif %}>
+        <a class="a-color" href="{{ h.url_for('%s.read' % pkg.type, id=pkg.name) }}/resource/{{csv}}"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Información</a>
+    </li>
+    <li  {% if 'map' in h.current_url() %} class="active" {% endif %}>
+        <a class="a-color" href="{{ h.url_for('%s.read' % pkg.type, id=pkg.name) }}/resource/{{csv}}"><span class="glyphicon glyphicon-list" aria-hidden="true"></span> Tabla</a>
+    </li>
+    <li  {% if 'map' in h.current_url() %} class="active" {% endif %}>
+        <a class="a-color" href="{{ h.url_for('%s.read' % pkg.type, id=pkg.name) }}/resource/{{csv}}"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span> Mapa</a>
+    </li>
+    <li  {% if 'map' in h.current_url() %} class="active" {% endif %}>
+        <a class="a-color" href="{{ h.url_for('%s.read' % pkg.type, id=pkg.name) }}/resource/{{csv}}"><span class="glyphicon glyphicon-circle-arrow-down" aria-hidden="true"></span> Descarga</a>
+    </li>
+
 {% endblock %}
 {% block package_social %}
     {% snippet "snippets/show_tags.html", tags=pkg.tags %}
