--- a/ckanext/indexa/templates/snippets/package_item.html
+++ b/ckanext/indexa/templates/snippets/package_item.html
@@ -1,3 +1,20 @@
 {% ckan_extends %}
+{% set csv = h.get_csv_id(package.resources) %}
 {% block heading_title %}
-    {{ h.link_to(title, h.url_for('%s.read' % package.type, id=package.name)) }}{% endblock %}
+{{ h.link_to(title, h.url_for('%s.read' % package.type, id=package.name)) }}{% endblock %}
+{% block resources %}
+<ul class="dataset-resources list-unstyled">
+    <li>
+        <a href="{{ h.url_for('%s.read' % package.type, id=package.name) }}" class="label label-default">Información</a>
+    </li>
+    <li>
+        <a href="{{ h.url_for('%s.read' % package.type, id=package.name) }}/resource/{{csv}}" class="label label-default">Mapa</a>
+    </li>
+    <li>
+        <a href="{{ h.url_for('%s.read' % package.type, id=package.name) }}" class="label label-default">Tabla</a>
+    </li>
+    <li>
+        <a href="{{ h.url_for('%s.read' % package.type, id=package.name) }}" class="label label-default">Descarga</a>
+    </li>
+</ul>
+{% endblock %}
