--- a/ckanext/indexa/templates/snippets/package_item.html
+++ b/ckanext/indexa/templates/snippets/package_item.html
@@ -1,20 +1,21 @@
 {% ckan_extends %}
 {% set csv = h.get_csv_id(package.resources) %}
+{% set map = h.get_map_id(package.resources) %}
 {% block heading_title %}
 {{ h.link_to(title, h.url_for('%s.read' % package.type, id=package.name)) }}{% endblock %}
 {% block resources %}
 <ul class="dataset-resources list-unstyled">
     <li>
-        <a href="{{ h.url_for('%s.read' % package.type, id=package.name) }}" class="label label-default">Información</a>
+        <a href="{{ h.url_for('%s.read' % package.type, id=package.name) }}" class="label label-default" data-tag="info">Información</a>
     </li>
     <li>
-        <a href="{{ h.url_for('%s.read' % package.type, id=package.name) }}/resource/{{csv}}" class="label label-default">Mapa</a>
+        <a href="{{ h.get_download_url(h.url_for('%s.read' % package.type, id=package.name)) }}" class="label label-default" data-tag="descarga">Descarga</a>
     </li>
     <li>
-        <a href="{{ h.url_for('%s.read' % package.type, id=package.name) }}" class="label label-default">Tabla</a>
+        <a href="{{ h.url_for('%s.read' % package.type, id=package.name) }}/resource/{{map}}" class="label label-default"data-tag="mapa">Mapa</a>
     </li>
     <li>
-        <a href="{{ h.url_for('%s.read' % package.type, id=package.name) }}" class="label label-default">Descarga</a>
+        <a href="{{ h.url_for('%s.read' % package.type, id=package.name) }}/{{csv}}" class="label label-default"data-tag="tabla">Tabla</a>
     </li>
 </ul>
 {% endblock %}
