--- a/ckanext/indexa/templates/snippets/package_item.html
+++ b/ckanext/indexa/templates/snippets/package_item.html
@@ -12,10 +12,12 @@
         <a href="{{ h.get_download_url(h.url_for('%s.read' % package.type, id=package.name)) }}" class="label label-default" data-tag="descarga">Descarga</a>
     </li>
     <li>
+        <a href="{{ h.url_for('%s.read' % package.type, id=package.name) }}/resource/{{csv}}" class="label label-default"data-tag="tabla">Tabla</a>
+    </li>
+    {% if map %}
+    <li>
         <a href="{{ h.url_for('%s.read' % package.type, id=package.name) }}/resource/{{map}}" class="label label-default"data-tag="mapa">Mapa</a>
     </li>
-    <li>
-        <a href="{{ h.url_for('%s.read' % package.type, id=package.name) }}/{{csv}}" class="label label-default"data-tag="tabla">Tabla</a>
-    </li>
+    {% endif%}
 </ul>
 {% endblock %}
